1.2.5 05/11/2006
- Add ability for clients to request all M and G keypresses be 'pushed' to them,
  rather than having to request them repeatedly.  If a client uses this
  option, no keyboard processing is done by the daemon, and the client must
  be prepared to do uinput processing itself, if necessary.  This limitation
  may be removed in future versions of the API.  Normal processing will
  resume when the client that requested this feature exits or closes its
  connection.
- Add manpage for the daemon.
- Fix automake bug that caused documentation not to be installed by default.
- Fix the daemons cmdline processing to handle more than one commandline option.
- Refactored the code slightly to allow for easier modification in the future.
- Handle long commandline arguments such as --help --version --kill --switch.
- Greatly improve error reporting.
- Add client development documentation (man g15daemon_client_devel / README.client_devel)
- Added a 'debug' mode (-d or --debug) cmdline switch to keep the daemon in the foreground
  rather than daemonising.  All errors and other info will be reported to STDERR in this mode.
- If compiled with libg15 1.1.0 or greater (or svn versions later than 3/11/06), the daemon 
  will now reset the keyboard to defaults on exit.
- make distcheck && make dist now work as expected.
- libg15daemon_client is now slightly more useful
- debian packaging now installs manpages
1.2.5svn -> current
- Add compiletime check for uinput version, should resolve compilation problems on some distro's
- Security improved - the daemon now sets its effective uid to nobody as soon as possible.
1.9.0SVN
- Add plugin API
- partially rewritten event core 
- updated g15daemon_xmms_spectrum plugin with new features, now enabled via configure --enable-xmmsplugin
  xmms devel and glib devel packages will need to be installed prior to attempting ./configure --enable-xmmsplugin
  Plugin is not compiled by default.
- Clock is now a plugin


